Bug 1860646 - Suppress C switch fallthrough warning when building with GCC. r=kaie DONTBUILD

--HG--
extra : amend_source : 70cb0f180f3abd8c0ad33f070534f3be02bfc3f2